# ssi-forest

./: README.md  setup.cfg
notebooks/: eye_of_the_isoforest.ipynb  test.ipynb  test_filtering.ipynb
ssi_forest/: semi_supervised_isolation_forest.py
