[metadata]
name = ssi-forest
version = 0.1.0
author = Konstantin Malanchev
author_email = 'hombit@gmail.com'
description = Semi-supervised isolation forest
long_description = file: README.md
url = 'https://github.com/hombit/ssi-forest'
license = MIT
classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
        scikit-learn>=0.24,<0.25
        numpy
        scipy
